--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -1,3 +1,3 @@
 # Tmux configurations added by github.com/Jiggins/Bash-Config
-source ${HOME}/.tmux/tmuxPrefs
+source ${HOME}/.config/tmux/tmuxPrefs
 
