--- a/src/config/powerline/config.json
+++ b/src/config/powerline/config.json
@@ -26,7 +26,7 @@
     },
     "tmux": {
       "colorscheme": "default",
-      "theme": "custom"
+      "theme": "default"
     },
     "vim": {
       "colorscheme": "default",
