--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -59,9 +59,10 @@ set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
-set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'fullscreen'
+set -g @continuum-kill-default 'on'          # Wed  2 Dec 2015 - Not yet implemented - see pull request https://github.com/tmux-plugins/tmux-continuum/pull/7
+set -g @continuum-restore 'on'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
