Change neme of repository in comments

--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -1,4 +1,4 @@
-# Tmux configurations added by github.com/Jiggins/Bash-Config
+# configurations added by github.com/Jiggins/dotfiles
 
 # Set C-a as Prefix key
 set -g prefix C-a
