--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -4,6 +4,8 @@
 set -g prefix C-a
 bind C-a send-prefix
 
+# Set the terminal emulator's title to the current tab's title:
+set -g set-titles on
 # Start Window Numbering at 1
 set -g base-index 1
 
@@ -13,8 +15,13 @@ setw -g aggressive-resize on
 # Zero delay after pressing Escape
 set -s escape-time 0
 
-# Solves rendering issues with Vim inside tmux
-set -g default-terminal "screen-256color"
+## set the default TERM
+set -g default-terminal screen
+
+## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
+set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
+## determine if we should enable 256-colour support
+if "[[ ${TERM} =~ 256color || ${TERM} == fbterm ]]" 'set -g default-terminal screen-256color'
 
 # Tmux Powerline
 run-shell "if powerline-daemon -q; then powerline-daemon; fi"
