Tmux: allow scroll wheel use in tmux

--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -6,6 +6,10 @@ bind C-a send-prefix
 
 # Set the terminal emulator's title to the current tab's title:
 set -g set-titles on
+
+# Fix the scroll buffer so it works (more) normally:
+# set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
 # Start Window Numbering at 1
 set -g base-index 1
 
@@ -22,6 +26,17 @@ set -g default-terminal screen
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
 ## determine if we should enable 256-colour support
 if "[[ ${TERM} =~ 256color || ${TERM} == fbterm ]]" 'set -g default-terminal screen-256color'
+
+set -g mouse off
+
+# Use the terminal mouse behaviour
+set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
+
+bind-key m set-option -g mouse on \; display 'Mouse: ON'
+bind-key M set-option -g mouse off \; display 'Mouse: OFF'
+
+bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
 # Tmux Powerline
 run-shell "if powerline-daemon -q; then powerline-daemon; fi"
