Tmux: misc option changes

--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -40,8 +40,8 @@ bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "se
 
 # Tmux Powerline
 run-shell "if powerline-daemon -q; then powerline-daemon; fi"
-run-shell ". ${HOME}/.vim/bundle/powerline/powerline/bindings/bash/powerline.sh"
 source "${HOME}/.vim/bundle/powerline/powerline/bindings/tmux/powerline.conf"
+run-shell ". ${HOME}/.vim/bundle/powerline/powerline/bindings/bash/powerline.sh"
 
 bind - resize-pane -D 1
 bind + resize-pane -U 1
@@ -52,9 +52,6 @@ set-option -gw xterm-keys on
 # Vi mode in tmux
 # http://blog.sanctum.geek.nz/vi-mode-in-tmux/
 set-window-option -g mode-keys vi
-
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
 
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
@@ -83,10 +80,9 @@ set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
-set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'fullscreen'
 set -g @continuum-kill-default 'on'          # Wed  2 Dec 2015 - Not yet implemented - see pull request https://github.com/tmux-plugins/tmux-continuum/pull/7
-set -g @continuum-restore 'on'
+set -g @continuum-restore 'off'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
