Tmux: fix $TERM setting

--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -25,7 +25,7 @@ set -g default-terminal screen
 ## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
 ## determine if we should enable 256-colour support
-if "[[ ${TERM} =~ 256color || ${TERM} == fbterm ]]" 'set -g default-terminal screen-256color'
+set -g default-terminal screen-256color
 
 set -g mouse off
 
@@ -79,12 +79,16 @@ set -g @continuum-boot-options 'fullscreen'
 set -g @continuum-kill-default 'on'          # Wed  2 Dec 2015 - Not yet implemented - see pull request https://github.com/tmux-plugins/tmux-continuum/pull/7
 set -g @continuum-restore 'off'
 
+# Colour sidebar output
+set -g @sidebar-tree-command 'tree -C'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 
 # Do not boot tmux on startup
