--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -27,9 +27,18 @@ set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WIND
 ## determine if we should enable 256-colour support
 set -g default-terminal screen-256color
 
-set -g mouse off
+# Layouts
+set-window-option -g other-pane-width 100
+set-window-option -g other-pane-height 24
+
+# Swap even and main layouts
+bind-key M-1 select-layout main-horizontal
+bind-key M-2 select-layout main-vertical
+bind-key M-3 select-layout even-horizontal
+bind-key M-4 select-layout even-vertical
 
 # Use the terminal mouse behaviour
+set -g mouse off
 set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
 
 bind-key m set-option -g mouse on \; display 'Mouse: ON'
