--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -100,8 +100,14 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 
+set -g @resurrect-strategy-vim 'session'        # save vim sessions (may require the tpope/vim-obsession plugin)
+set -g @resurrect-capture-pane-contents 'on'    # save pane contents
+
 # Do not boot tmux on startup
 set -g @continuum-boot 'off'
+
+# Restore session at startup
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
