--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -25,7 +25,7 @@ set -g default-terminal screen
 ## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
 ## determine if we should enable 256-colour support
-set -g default-terminal tmux-256color
+set -g default-terminal screen-256color
 
 # Layouts
 set-window-option -g other-pane-width 100
