--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -27,6 +27,10 @@ set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WIND
 ## determine if we should enable 256-colour support
 set -g default-terminal screen-256color
 
+# Enable tmux clipboard for Vim OSCYank
+# https://github.com/tmux/tmux/wiki/Clipboard#quick-summary
+set -s set-clipboard on
+
 # Layouts
 set-window-option -g other-pane-width 100
 set-window-option -g other-pane-height 24
