TMUX: Filter ignored files from tmux sidebar

--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -89,7 +89,7 @@ set -g @continuum-kill-default 'on'          # Wed  2 Dec 2015 - Not yet impleme
 set -g @continuum-restore 'off'
 
 # Colour sidebar output
-set -g @sidebar-tree-command 'tree -C'
+set -g @sidebar-tree-command 'rg --files | tree -C --fromfile'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
