Tmux: Add popup windows for tig and btm

--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -54,6 +54,10 @@ bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "se
 bind - resize-pane -D 1
 bind + resize-pane -U 1
 
+# Popup windows
+bind-key g popup -h 90% -w 75% tig
+bind-key b popup -h 90% -w 75% btm
+
 # Imporved tmux support in vim
 set-option -gw xterm-keys on
 
