--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -65,23 +65,25 @@ set-option -gw xterm-keys on
 # http://blog.sanctum.geek.nz/vi-mode-in-tmux/
 set-window-option -g mode-keys vi
 
-# Smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind C-h        if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind C-j        if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind C-k        if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind C-l        if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+# # Smart pane switching with awareness of vim splits
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?)(diff)?$'"
+bind-key -n 'C-left'  if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-down'  if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-up'    if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-right' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
 
-bind -n C-left  if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-down  if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-up    if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-right if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\     if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
-bind -n M-left  if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n M-down  if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n M-up    if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n M-right if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind-key -T copy-mode-vi 'C-left'  select-pane -L
+bind-key -T copy-mode-vi 'C-down'  select-pane -D
+bind-key -T copy-mode-vi 'C-up'    select-pane -U
+bind-key -T copy-mode-vi 'C-right' select-pane -R
+bind-key -T copy-mode-vi 'C-\'     select-pane -l
 
 # install tpm if not already installed
 if "test ! -d ~/.tmux/plugins/tpm" \
