--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ local.zsh
 # Tmux plugins
 src/tmux/plugins
 src/tmux/resurrect/
+src/tmux/sidebar/directory_widths.txt
 
 # Zsh compiled files
 *.zwc
