Tmux: Enable automatic-rename and renumber-windows

--- a/src/rcfiles/tmux.conf
+++ b/src/rcfiles/tmux.conf
@@ -7,6 +7,9 @@ bind C-a send-prefix
 # Set the terminal emulator's title to the current tab's title:
 set -g set-titles on
 
+set -g automatic-rename on
+set -g renumber-windows on
+
 # Fix the scroll buffer so it works (more) normally:
 # set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
