--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -109,10 +109,11 @@ set -g @sidebar-tree-command 'rg --files | tree -C --fromfile'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-urlview'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @resurrect-strategy-vim 'session'        # save vim sessions (may require the tpope/vim-obsession plugin)
 set -g @resurrect-capture-pane-contents 'on'    # save pane contents
