Tmux: Bind <c-a>space to open a hotkey window in a popup

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -61,6 +61,7 @@ bind + resize-pane -U 1
 bind-key g popup -h 90% -w 75% tig
 bind-key b popup -h 90% -w 75% btm
 bind-key l popup -h 90% -w 50% git log --decorate --all --graph --oneline
+bind-key space popup -h 90% -w 75% hotkey-window.sh
 
 # Imporved tmux support in vim
 set-option -gw xterm-keys on
