Tmux: Set allow-passthrough for terminal escape sequences

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -29,6 +29,9 @@ set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WIND
 # https://github.com/tmux/tmux/wiki/Clipboard#quick-summary
 set -s set-clipboard on
 
+# https://github.com/tmux/tmux/wiki/FAQ#what-is-the-passthrough-escape-sequence-and-how-do-i-use-it
+set -g allow-passthrough on
+
 # Layouts
 set-window-option -g other-pane-width 100
 set-window-option -g other-pane-height 24
