--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -57,7 +57,7 @@ bind + resize-pane -U 1
 
 # Popup windows
 bind-key g popup -h 90% -w 75% tig
-bind-key b popup -h 90% -w 75% btm
+bind-key b popup -h 90% -w 75% btop
 bind-key l popup -h 90% -w 50% git log --decorate --all --graph --oneline
 bind-key space popup -h 90% -w 75% hotkey-window.sh
 
